--- a/shoufengqin/shoufengqin.html
+++ b/shoufengqin/shoufengqin.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>shoufengqin</title>
+  <title>shoufeng</title>
   <style>
     ul {
       list-style: none;
